# myeditor

./: .gitignore  CMakeLists.txt  LICENSE  README.md
3rd/nativefiledialog/: CMakeLists.txt
3rd/stb/: CMakeLists.txt
launcher/: CMakeLists.txt  imgui_impl_opengl3.cpp  launcher.cpp  module_argument.cpp  module_argument.h
launcher/conf/: myeditor.json
myeditor/: CMakeLists.txt  Config.cmake.in  editor.cpp  editor.h  log.cpp  log.h  mod_manager.cpp  mod_manager.h  panel.cpp  panel.h  panel_context.cpp  panel_context.h  panel_context_manager.cpp  panel_context_manager.h  rate_ctrl.cpp  rate_ctrl.h  time_recorder.cpp  time_recorder.h
myeditor/builtin/: CMakeLists.txt  panel_log.cpp  panel_log.h  panel_log.json  panel_menu.cpp  panel_menu.h  panel_menu.json  panel_myframe.cpp  panel_myframe.h  panel_myframe.json
